--- a/geonode/layers/templates/layouts/panels.html
+++ b/geonode/layers/templates/layouts/panels.html
@@ -129,8 +129,27 @@ form #mdeditor_form label{
 </style>
 
 <style>
+/* draggable table */
+span.grippy {
+  content: '....';
+  width: 15px;
+  height: 26px;
+  display: inline-block;
+  overflow: hidden;
+  line-height: 5px;
+  padding: 3px 4px;
+  cursor: move;
+  vertical-align: middle;
 
-
+  font-size: 12px;
+  font-family: sans-serif;
+  letter-spacing: 2px;
+  color: #cccccc;
+  text-shadow: 1px 0 1px black;
+}
+span.grippy::after {
+  content: '.. .. .. ..';
+}
     
 
 </style>
@@ -260,8 +279,8 @@ form #mdeditor_form label{
                 <div class="panel panel-default">
                     <!-- div class="panel-heading">Metadata info</div -->
                     <div class="panel-body">
-                        <div class="row" id="mdinfo">
-                            <div class="row">
+                        <div class="" id="mdinfo">
+                            <div class="">
                                 <div class="col-lg-4">
                                     <div>
                                         <span><label for="{{ layer_form.language|id }}">{{ layer_form.language.label }}</label></span>
@@ -318,10 +337,11 @@ form #mdeditor_form label{
     </div>
 
     <div id="ownership" class="tab-pane fade">
-        <br />
-        <p>Other, Optional, Metadata</p>
-        <div class="row">
-            <div class="col-xs-12 col-lg-5">
+        <div class="panel-group"><div class="panel panel-default"><div class="panel-body">
+        <div>
+            
+            <div class="col-xs-12 col-lg-6">
+              <p>Other, Optional, Metadata</p>
                 <div>
                     <span><label for="{{ layer_form.edition|id }}">{{ layer_form.edition.label }}</label></span>
                     <!--<p class="xxs-font-size">(Version of the cited resource)</p>-->
@@ -415,17 +435,17 @@ form #mdeditor_form label{
                 </div>
             </div>
         </div>
+      </div></div></div>
     </div>
     <div id="dataset" class="tab-pane fade">
-      <div class="row">
-          <div class="col">
-              <div class="panel panel-default">
-                  <div class="panel-heading">Dataset Attributes</div>
-                  <div class="panel-body">
+      <div class="panel-group"><div class="panel panel-default"><div class="panel-body">
+      <div>
+          <div style="padding: 15px">
                       <div>
                           {{ attribute_form.management_form }}
                           <table class="table table-striped table-bordered table-condensed">
-                              <tr>
+                              <tr class="table-header">
+                                  <th style="width:25px;background: #efefef;"></th>
                                   <th>{% trans "Attribute" %}</th>
                                   <th>{% trans "Label" %}</th>
                                   <th>{% trans "Description" %}</th>
@@ -434,6 +454,7 @@ form #mdeditor_form label{
                               {% for form in attribute_form.forms %}
                                   {% if form.attribute %}
                                       <tr>
+                                          <td style="width:25px;background: #efefef;"> <span class="grippy"></span></td>
                                           <td><div style="display:none">{{form.id}}</div>{{form.attribute}}</td>
                                           <td>{{form.attribute_label}}</td>
                                           <td>{{form.description}}</td>
@@ -444,8 +465,9 @@ form #mdeditor_form label{
                           </table>
                         </div>
                   </div>
+                </div>
               </div>
-          </div>
+            </div>
       </div>
     </div>
 </div>
