- Thumbnail setter improvements

--- a/geonode/layers/templates/layers/layer_metadata.html
+++ b/geonode/layers/templates/layers/layer_metadata.html
@@ -10,7 +10,7 @@
 
 
 {% block head %}
-    {% include "layers/layer_ol3_map_mini.html" %}
+    {% include "layers/layer_ol3_map.html" %}
 
     <style>
         .xxs-font-size{
