--- a/geonode/layers/templates/layers/layer_ol3_map.html
+++ b/geonode/layers/templates/layers/layer_ol3_map.html
@@ -1,31 +1,41 @@
-<link rel="stylesheet" href="http://openlayers.org/en/v3.17.1/css/ol.css" type="text/css">
-<script src="http://openlayers.org/en/v3.17.1/build/ol.js" type="text/javascript"></script>
+<link rel="stylesheet" href="http://dev.openlayers.org/releases/OpenLayers-2.13.1/theme/default/style.css" type="text/css">
+<script src="http://dev.openlayers.org/releases/OpenLayers-2.13.1/OpenLayers.js" type="text/javascript"></script>
 <script type="text/javascript">
   
   document.addEventListener("DOMContentLoaded", function(event) {
 
-  	document.getElementById('preview_map').setAttribute("style", "height:600px");
+  	// document.getElementById('preview_map').setAttribute("style", "height:600px");
 
     {% if resource.bbox_string %}
     var bbox = [{{ resource.bbox_string }}];
     {% else %}
     var bbox = null;
     {% endif %}
-    
+
     source = null;
     {% if resource.get_tiles_url %}
-    source = new ol.source.XYZ({
-    	url: '{{ resource.get_tiles_url|safe }}'
+    {% if 'access_token' in request.session %}
+    var url = '{{ resource.get_tiles_url|safe }}&access_token={{request.session.access_token}}'
+    {% else %}
+    var url = '{{ resource.get_tiles_url|safe }}'
+    {% endif %}    
+    source = new OpenLayers.Layer.XYZ({
+    	url: url
     });
 
     {% elif resource.ptype == 'gxp_wmscsource' %}
-    source = new ol.source.TileWMS({
-    	url: '{{ resource.ows_url|safe }}',
+    {% if 'access_token' in request.session %}
+    var url = '{{ resource.ows_url|safe }}&access_token={{request.session.access_token}}'
+    {% else %}
+    var url = '{{ resource.ows_url|safe }}'
+    {% endif %}
+    source = new OpenLayers.Layer.TileWMS({
+    	url: url,
     	params: {'LAYERS': '{{ resource.typename }}'}
     });
 
     {% elif resource.ptype == 'gxp_arcrestsource' %}
-    source = new ol.source.TileArcGISRest({
+    source = new OpenLayers.Layer.TileArcGISRest({
     	url: '{{ resource.ows_url|safe }}',
         params: {'LAYERS': '{{ resource.typename }}'}
     });
@@ -39,27 +49,25 @@
     }
     if (source != null) {
     	var layers = [
-        	new ol.layer.Tile({
-            	source: new ol.source.OSM()
-          	}),
-          	new ol.layer.Tile({
-            	source: source
-          	})
+            new OpenLayers.Layer.OSM("OpenCycleMap",
+              ["http://a.tile.openstreetmap.org/${z}/${x}/${y}.png",
+               "http://b.tile.openstreetmap.org/${z}/${x}/${y}.png",
+               "http://c.tile.openstreetmap.org/${z}/${x}/${y}.png"]),
+          	source
     	];
     	
-    	var map = new ol.Map({
-        	layers: layers,
-          	target: 'preview_map',
-          	view: new ol.View({
-            	center: [0, 0],
-            	zoom: 2,
-            	projection: crs
-            })	
+    	var map = new OpenLayers.Map({
+            div: 'preview_map', 
+            projection: crs,
+            controls: [],
+            layers: layers,
+            center: [0, 0],
+            zoom: 2
     	});
 
     	if (bbox != null) {
     	    if (crs != 'EPSG:4326') {
-    		    bbox = ol.proj.transformExtent(bbox, 'EPSG:4326', 'EPSG:3857');
+                bbox = new OpenLayers.Bounds(bbox).transform(new OpenLayers.Projection("EPSG:4326"),new OpenLayers.Projection("EPSG:3857"));
     		}
     		map.getView().fit(bbox, map.getSize());
     	}
