--- a/geonode/layers/templates/layers/layer_metadata.html
+++ b/geonode/layers/templates/layers/layer_metadata.html
@@ -75,7 +75,9 @@
         #regions_multiselect_container.content {
             position: absolute;
         }
-
+        h2.page-title{
+          max-width: calc(100% - 300px) /* to not overlap with completeness */
+        }
         .fstControls {
             width: 100% !important;
         }
@@ -115,7 +117,7 @@
 <div class="container-fluid page-header" style="position: relative;">
   <!--<a href="{% url "layer_browse" %}" class="btn btn-primary pull-right">{% trans "Explore Layers" %}</a>-->
   <h2 class="page-title">{% trans "Metadata" %}&nbsp;{% blocktrans with layer.typename as layer_title %}for {{ layer_title }}{% endblocktrans %}</h2>
-      <div id="profileCompleteness" class="alert alert-info" style="position: absolute; right: 0; top: 0; padding: 4px; width: 300px">
+      <div id="profileCompleteness" class="alert alert-info" style="position: absolute; right: 0; top: 0; padding: 4px;">
         <strong>Completeness</strong>
         <div style="padding: 2px;">
           <small class="completed text-success" style="display: none; "><i class="fa fa-check"></i>Mandatory fields completed</small>
