--- a/geonode/layers/templates/layouts/panels.html
+++ b/geonode/layers/templates/layouts/panels.html
@@ -157,7 +157,7 @@ span.grippy::after {
     
 
 </style>
-<button class="btn btn-success metadata-edit-done" type="submit" style="float:right; opacity: 0;" >Done!</button>
+<button class="btn btn-success metadata-edit-done" id="btn_upd_md_done" type="submit" style="float:right; opacity: 0;" >Done!</button>
 
 <ul id="md_tabs" class="nav nav-tabs">
     <li id="metadata_edit_tab" class="active">
