--- a/geonode/layers/templates/layers/layer_ol2_map.html
+++ b/geonode/layers/templates/layers/layer_ol2_map.html
@@ -1,6 +1,13 @@
 <link rel="stylesheet" href="http://dev.openlayers.org/releases/OpenLayers-2.13.1/theme/default/style.css" type="text/css">
 <script src="http://dev.openlayers.org/releases/OpenLayers-2.13.1/OpenLayers.js" type="text/javascript"></script>
 <script src="http://dev.openlayers.org/releases/OpenLayers-2.13.1/lib/OpenLayers/Layer/ArcGISCache.js" type="text/javascript"></script>
+
+<style>
+    .olControlAttribution {
+        bottom: 0 !important;
+    }
+</style>
+
 <script type="text/javascript">
   
   document.addEventListener("DOMContentLoaded", function(event) {
